--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 \usepackage{fancyhdr}	                          %Titelblatt
 \usepackage{graphicx}	                          %Bilder einf"ugen
 \usepackage[listings,skins,breakable]{tcolorbox}
-\usepackage{tikz,pgf}                           %Grafiken zeichnen
+\usepackage{tikz,pgf,pgfplots}                  %Grafiken zeichnen
 \usepackage{mdframed}	                          %Box			%\begin{mdframed} 		und			%\end{mdframed}
 \usepackage{epstopdf}
 \usepackage[utf8]{inputenc}
@@ -22,9 +22,11 @@
 \usepackage{enumerate}                          %Zeichen der Enumerierung beliebig wählbar
 \usepackage{hyperref}
 \usepackage[makeroom]{cancel}                   %Durchgestrichene Terme mit \cancel{}
-\usetikzlibrary{arrows}
 \usepackage{tkz-tab}                            %für Monotonietabellen??
 \usepackage{marvosym}                           %Symbole wie Blitze und co. ...
+
+\pgfplotsset{compat=1.15}
+\usetikzlibrary{arrows}
 
 \pagestyle{fancy}
 \fancyhead{}
