--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -74,5 +74,5 @@ $\Rightarrow$ $\left\vert \begin{array}{rccl}
 0&0&1&3\\
 \end{array}\right\vert$ \qquad $\Rightarrow \mathbb{L}=\{(1|2|3) \}$ \\ 
 
-Wenn Werte mit Kommazahlen drankommen, ist es nützlich, im Taschenrechner [Math] $+$ [1](Frac) einzugeben, um sich die Werte in Brüchen anzeigen zu lassen.\\
+Wenn sich Werte mit Kommazahlen ergeben, ist es nützlich, im Taschenrechner [Math] $+$ [1](Frac) einzugeben, um sich die Werte in Brüchen anzeigen zu lassen.\\
 
