--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -70,7 +70,19 @@ $\Rightarrow\left(1-\dfrac{1}{(n+1)^2}\right)^{n+1}\cdot\dfrac{n+1}{n}>1+(n+1)\c
 
 \end{itemize}
 
-		\section{Eigenschaften}
+\section{Eigenschaften}
+		
+Exponentielle Funktionen weisen oft sehr n"utzliche Eigenschaften auf. Sei $f(x)= a^x$ mit $a>1$ und $g(x)=x^n$ mit n $\in \R$:\\
+
+\left.\parbox{0.4\textwidth}{
+\begin{itemize}
+\item $\lim\limits_{x\to +\infty} \dfrac{f}{g} = \lim\limits_{x\to +\infty}\dfrac{a^x}{x^n} = +\infty $ \\
+\item $\lim\limits_{x\to -\infty} \dfrac{f}{g} = \lim\limits_{x\to -\infty}\dfrac{a^x}{x^n} = 0$ \\ 
+\end{itemize}
+} \right\}$ \quad Diese Vergleiche werden \textbf{croissances comparees} genannt
+
+		
+		
 		\section{Ableitungsregeln}
 
 \begin{enumerate}
