--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -185,6 +185,38 @@ $\lim\limits_{x \rightarrow x_{0}}f(x) = g $\quad $\Leftrightarrow$ \quad $\fora
 \end{center}
 \end{Definition}
 
+\begin{Definition}
+Regel von l'Hospital: f"ur Grenzwerte des Typs $0/0$ und $\infty/\infty$\\\\
+Seien zwei Funktionen $f$ und $g$ differenzierbar und eine Zahl $x_{0}$ : g(x_{0})\neq0$ und gelte entweder\\\\
+\lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = \infty$ \qquad ODER \qquad  $\lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = 0$\\\\
+dann gilt:\\\\
+$\lim\limits_{x \rightarrow x_{0}} \dfrac{f(x)}{g(x)} = \lim\limits_{x \rightarrow x_{0}}\dfrac{f'(x)}{g'(x)}$\\
+\end{Definition}
+
+\begin{Bemerkung}
+\begin{enumerate}
+\item Falls die Funktionsvorschrift nicht direkt ein Bruch ist (siehe 2. Beispiel) sollte man diese erst zu einem Bruch umformen, um mit der Hospital-Regel fortfahren zu k"onnen. 
+\item ACHTUNG: Die Hospital-Regel ist nicht umkehrbar!
+\end{enumerate}
+\end{Bemerkung}
+
+\begin{Beispiel}
+
+$f(x) = \dfrac{\sin(x)}{x} \qquad x_{0} = 0\qquad \qquad D=\R\backslash\{0\}$ \\\\
+$\Rightarrow \lim\limits_{x \rightarrow x_{0}}f(x) = \lim\limits_{x \rightarrow x_{0}}\dfrac{\sin(x)}{x} = \lim\limits_{x \rightarrow x_{0}} \dfrac{\cos(x)}{1} = 1 $\\\\ \\
+
+$g(x) = x\cdot \log\left(\dfrac{x+1}{x-1}\right) \qquad $f"ur $ x\to \infty \qquad \qquad D=\R\backslash\{1\}$ \\\\
+\begin{array}{rcl}
+$\Rightarrow \lim\limits_{x \rightarrow \infty} g(x) & = & \lim\limits_{x \rightarrow \infty} x\cdot \log\left(\dfrac{x+1}{x-1}\right) $\\
+&=& \lim\limits_{x \rightarrow \infty} \dfrac{\log\left(\dfrac{x+1}{x-1}\right)}{\dfrac{1}{x}}\\
+&=& \lim\limits_{x \rightarrow \infty} \dfrac{\dfrac{x-1}{x+1} \cdot \dfrac{-2}{(x-1)^2}}{-\dfrac{1}{x^2}}\\
+&=& \lim\limits_{x \rightarrow \infty} \dfrac{\dfrac{-2}{x^2-1}}{-\dfrac{1}{x^2}}\\
+&=& \lim\limits_{x \rightarrow \infty} \dfrac{2x^2}{x^2-1} = 2 \\
+\end{array}
+
+\end{Beispiel}
+
+
 \subsection{Asymptoten}
 
 Eine Asymptote ist eine Gerade oder Kurve, die sich dem Graphen einer Funktion immer weiter ann"ahert. Dabei unterscheidet man verschiedene F"alle:\\
