Anfang einer Verbesserung

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -321,8 +321,9 @@
 \section{Linearkombination}
 
     \paragraph{} Vektoren lassen sich allgemein mit der additiven Verknüpfung des Vektorraums verknüpfen.
-    Diese Verknüpfung zwischen zwei beliebigen Vektoren $\vv{v}$ und $\vv{u}$ erfolgt, wie auch schon im Teil Verbindungsvektor gezeigt wird, wie folgt:
-    $\vv{v}+\vv{u}=\left(\begin{array}{c}{v_1+u_1 \\ v_2+u_2 \\ ... \\ v_n+u_n}\end{array}\right)$.
+    Diese Verknüpfung zwischen zwei beliebigen Vektoren $\vv{v}$ und $\vv{u}$ erfolgt, wie auch schon im Teil Verbindungsvektor gezeigt wird, wie
+    folgt: $\vv{v}+\vv{u}=\left(\begin{array}{c}{v_1+u_1 \\ v_2+u_2 \\ ... \\ v_n+u_n}\end{array}\right)$. Anschaulich wird $\vv{u}$ an $\vv{v}$
+    angehängt und der Schaft von $\vv{v}$ mit der Spitze verbunden, um den neuen Vektor zu bilden.
     \\
     \begin{Definition}
         Eine Familie von Vektoren $\vv{a_1},\vv{a_2},...,\vv{a_n}\in V$ wird als linear abhängig bezeichnet, wenn die Gleichung:
@@ -341,10 +342,13 @@
 
 \section{Skalarprodukt}
 
-    \begin{minipage}{0.5\textwidth}
-
+    \begin{minipage}{0.45\textwidth}
+        \paragraph{} Das Skalarprodukt dient dazu ein Maß für den Winkel, den zwei Vektoren $\vv{a}$ und $\vv{b}$ einschließen, festzulegen. Zudem
+        lässt dich von dieser Definition aus der Winkel selber anhand der Vektoren bestimmt werden. Das Skalarprodukt wird zunächst als die
+        Multiplikation der Norm der Projektion des Vektors $\vv{b}$ in die Richtung von $\vv{a}$, das heißt der Anteil von $\vv{b}$ der auf der
+        Geraden liegt, entlang welcher $\vv{a}$ liegt, mit der Norm von $\vv{a}$ definiert.
     \end{minipage}
-    \begin{minipage}{0.05\textwidth}
+    \begin{minipage}{0.1\textwidth}
         \quad
     \end{minipage}
     \begin{minipage}{0.45\textwidth}
