--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -1,4 +1,4 @@
-\chapter{Algorithhmik}
+\chapter{Algorithmik}
 \section{Algorithmen und Programmierung}
 \begin{Definition}
 	Algorithmen besitzen die folgenden charakteristischen Eigenschaften:
