--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -38,12 +38,14 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
 \subsection{Sätze über Integrale}
 \begin{Theorem}
   \begin{minipage}{0.6\textwidth}
-    $
-    \int_a^b f(x)dx &= -\int_b^a f(x)dx\\\\
-    \int_a^b (f(x)+g(x))dx &= \int_a^b f(x)dx + \int_a^b g(x)dx\\\\
-    \int_a^b r*f(x)dx &= r*\int_a^b f(x)dx\\\\
-    \int_a^b f(x)dx + \int_b^c f(x)dx &= \int_a^c f(x)dx
-    $
+    \begin{array}{rccl}
+      $
+      \int_a^b f(x)dx = -\int_b^a f(x)dx\\\\
+      \int_a^b (f(x)+g(x))dx = \int_a^b f(x)dx + \int_a^b g(x)dx\\\\
+      \int_a^b r*f(x)dx = r*\int_a^b f(x)dx\\\\
+      \int_a^b f(x)dx + \int_b^c f(x)dx = \int_a^c f(x)dx
+      $
+    \end{array}
   \end{minipage}
   \begin{minipage}{0.4\textwidth}
     Invertieren der Intergrationsgrenzen\\\\
@@ -54,166 +56,39 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
 
 \end{Theorem}
 \subsubsection{Beweise}
-Beweise\\\\\\\\\\
+Invertieren der Intergrationsgrenzen:\\
+$\int_a^b f(x)dx = F(b)-F(a) = -(F(a)-F(b)) = -\int_b^a f(x)dx$\\\\
+Summenregel:\\
+$\int_a^b f(x)+g(x)dx = [F(x)+G(x)]_a^b = F(b)+G(b)-(F(a)+G(b)) = F(b)-F(a)+G(b)-G(b) = \int_a^b f(x)dx$+\int_a^b g(x)dx$\\\\
+Linearität:\\
+$\int_a^b r*f(x)dx = [r*F(x)]_a^b = r*F(b)-r*F(a) = r*(F(a)-F(b)) = r*\int_a^b f(x)dx$\\\\
+Abschnittweise Integration:\\
+$\int_a^b f(x)dx+ \int_b^c f(x)dx = F(a)-F(b)-(F(b)-F(c)) = F(c)-F(a) = \int_a^c f(x)dx$\\\\
 
+\subsection{Merkenswerte Integrale}
+\begin{array}{rccl}
+  \int x^n dx$&=&$\frac{x^{n+1}}{n+1}\\
+  \int\sin x dx$&=&$ -\cos x\\
+  \int\cos x dx$&=&$ \sin x\\
+  \int\frac{ dx}{\cos^2x}$&=&$ \tan x\\
+  \int\frac{1}{x} dx$&=&$ \ln|x|\\
+\end{array}
 
-$\int_a^b f(x)d x = \lim_{n\to\infty}\sum_{k=1}^n f(x_k)\Delta x_k = F(b) - F(a) = \left[F(x)\right]_a^b$\\
-Dies ist der \textbf{Hauptsatz der Differential- und Integralrechnung}. Mit
-ihm wird das Problem der Integration auf das Auffinden einer Stammfunktion
-zurückgeführt. Als Mathematiker müsste man noch anfügen, dass diese Beziehung
-nicht immer gilt, sondern nur unter gewissen Voraussetzungen.
-
-Der Hauptsatz ist sicher dann richtig, wenn die Funktion $f$ stetig ist.
-In diesem Fall kann man auch so formulieren:
-\[
-I_a(x)=\int_a^x f(\xi)\dD \xi \qquad\Rpf\qquad I_a'(x)=f(x)
-\]
-Die Funktion $I_a$ nennt man hier die Integralfunktion. Man kann sie sich
-vorstellen als die Funktion die jeder Stelle $x$ die Fläche zwischen $a$ und
-$x$ zuordnet. Unter den obigen Voraussetzungen ist also die Ableitung der
-Integralfunktion gleich der Randfunktion. Ist die Randfunktion $f$ nicht im
-ganzen Intervall stetig, sondern nur ">stückweise stetig"<, dann ist zwar die
-Integralfunktion immer noch stetig, aber in den Trennpunkten der
-Stetigkeitsbereiche nicht mehr notwendig differenzierbar.
-
-Häufig kommen auch sogenannte \emph{unbestimmte Integrale} vor. Ein
-unbestimmtes Integral ist einfach eine Stammfunktion. Man schreibt dann
-\[
-\int f(x)\dD x= F(x)+C
-\]
-und nennt $C$ die \emph{Integrationskonstante}.
-
-Eine Stammfunktion zu finden, ist allerdings häufig auch nicht sehr einfach.
-Für viele aus elementaren Funktionen zusammengesetzte Funktionen bekommt man
-leider Stammfunktionen, die nicht mehr elementar dargestellt werden können. Das gilt
-schon für so einfach aussehende Integrale wie
-\[
-\int \frac{\sin x}{x}\dD x
-\]
-
-Da $\sin x /x$ in ihrem Definitionsbereich stetig ist, muss sie nach dem
-Hauptsatz eine Stammfunktion haben. Sie lässt sich allerdings nicht mehr durch
-elementare Funktionen ausdrücken, sondern gibt eine ">neue"< sogenannte
-">höhere"< Funktion, die man Integralsinus nennt. Ihre Funktionswerte kann man
-mit Tabellen oder mit Computerprogrammen bestimmen. Zunächst mag man meinen,
-dies sei etwas besonderes, aber auch die Werte eines Logarithmus oder eines
-Sinus kann man nur mit dem Taschenrechner berechnen oder aus einer
-Funktionentafel entnehmen.
-
-
-
-
-
-
-
-
-
-\section{Flächenberechnung mittels Integralen}
+\subsection{Integrationsregeln}
+\subsubsection{Partielle Integration}
 \begin{Definition}
-  Für die auf dem Intervall $[a;b]$ (also stückweise) stetige Funktion $f$ mit Nullstellen und $x_1,x_2,...,x_n$
-  mit $a \leq x_1 \leq x_2 \leq ... \leq x_n \leq b$ ist der Flächeninhalt $A$ zwischen dem Graphen von $f$ und
-  der $x_1$-Achse im Intervall $[a;b]$ gegeben durch:\\\\
-  $A= |{\int_a^{x_1} f(x)dx}|+|{\int_{x_1}^{x_2} f(x)dx}|...+|{\int_{x_{n-1}}^{x_n} f(x)dx}|+|{\int_{x_n}^b f(x)dx}|$
+  Seien $u$ und $v$ zwei stetig differenzierbare Funktionen im Intervall $I$ und $u'$
+  und $v'$ in I stetig. Dann gilt:\\
+  $\int u(x)'v(x) dx= u(x)v(x) - \int u(x)v'(x) dx$
 \end{Definition}
-
-\\Graph+Intergal
-\definecolor{xdxdff}{rgb}{0.49019607843137253,0.49019607843137253,1.}
-\definecolor{ffqqqq}{rgb}{1.,0.,0.}
-\definecolor{qqzzqq}{rgb}{0.,0.6,0.}
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=5.0cm,y=5.0cm]
-\begin{axis}[
-x=5.0cm,y=5.0cm,
-axis lines=middle,
-xmin=-1.0261085461981427,
-xmax=0.8799969446433364,
-ymin=-0.45014188815180656,
-ymax=0.9656470777143747,
-xtick={-1.0,-0.8,...,0.8},
-ytick={-0.4,-0.2,...,0.8},]
-\clip(-1.0261085461981427,-0.45014188815180656) rectangle (0.8799969446433364,0.9656470777143747);
-\draw[line width=0.8pt,color=ffqqqq,fill=ffqqqq,fill opacity=0.10000000149011612] plot[raw gnuplot, id=func1] function{set samples 100; set xrange [-0.7:0.4]; plot 7.0*x**(3.0)+5.0*x**(2.0)-0.3} -- (0.4,0.) -- (-0.7,0.) -- cycle;
-\draw[line width=2.4pt,color=qqzzqq] plot[raw gnuplot, id=func0] function{set samples 100; set xrange [-0.9261085461981428:0.7799969446433365]; plot 7.0*x**(3.0)+5.0*x**(2.0)-0.3};
-\begin{scriptsize}
-\draw[color=qqzzqq] (-0.836110892770214,-1.1411817405388711) node {$f$};
-\draw[color=xdxdff] (-0.6828869787154327,0.05702926736952031) node {$A$};
-\draw[color=xdxdff] (0.4203252024789926,0.05702926736952031) node {$B$};
-\end{scriptsize}
-\end{axis}
-\end{tikzpicture}
-\begin{Beispiel}
-  $f(x)=x^2-2x^3;x\in \R$\\
-  notwendige und hinreichende Bedingung für Nullstellen:$f(x)=0$\\
-  $\Leftrightarrow x^2(x-2)&=0\\
-  \stackrel{SdN}{\Leftrightarrow}
-  \left\{ \begin{array}{rcl}
-  x^2&=0\\
-  x-2&=0
-  \end{array}\right\\
-  \Leftrightarrow
-  \left\{ \begin{array}{rcl}
-  x_1&=0\\
-  x_2&=2
-  \end{array}\right\\
-  $\\
-  Also gilt:\\
-  $A_{-1}^{3} &= |\int_{-1}^0 x^3-2x^2 dx| + |\int_{0}^2 x^3-2x^2 dx| + |\int_{2}^3 x^3-2x^2 dx|\\
-  &= |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{-1}^0| + |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{0}^2| + |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{2}^3|\\
-  &= |0-(\dfrac{1}{4}-\dfrac{2}{3})| + |4-\dfrac{8}{3}-0| + |\dfrac{81}{4}-54 - (4-\dfrac{8}{3})|\\
-  &= \dfrac {35}{6}$FE\\
-  (Also hoffentlich)
-
-\end{Beispiel}
-\begin{GTR-Tipp}
-  Mit $Y_1 = f(x)$ und $Y_2 = abs(Y_1)$ bzw. $Y_2 = |Y_1|$ (zu finden in 'MATH'>'NUM' oder über Alpha-F2) lässt sich die Fläche berechnen über 2nd-CALC mit der Option Integral.\\
-  Hierzu wählt man $Y_2$ aus und gibt $a$ und $b$ an.
-\end{GTR-Tipp}
-
-
-
-\section{Integrationsregeln}
-
-Da Integration die Umkehrung des Ableitens ist (">Aufleiten"<) übertragen sich
-die Ableitungsregeln auf das Integrieren:
-\begin{itemize}
-\item Konstante Faktoren bleiben stehen.
-\item Summen werden summandenweise aufgeleitet.
-\item $\D\int_a^b=\int_a^c+\int_c^b$
-\item $\D \int_a^b=-\int_b^a$
-\item Es gibt \emph{keine direkte} Umkehrung der Produkt-, Quotienten und
-  Kettenregel, sondern hier muss man kompliziertere Verfahren verwenden.
-\end{itemize}
-
-Wichtige Integrale sind:
-\begin{align}
-  \label{eq:36}
-  \int x^n\dD x&=\frac{x^{n+1}}{n+1}\\
-  \int\sin x\dD x&= -\cos x\label{eq:37}\\
-  \int\cos x\dD x&= \sin x\label{eq:38}\\
-  \int\frac{\dD x}{\cos^2x}&= \tan x\label{eq:39}\\
-  \int\frac{1}{x}\dD x&= \ln|x|\label{eq:40}\\
-  \int\frac{\dD x}{1+x^2}&= \arctan x\label{eq:41}
-\end{align}
-
-In Formelsammlungen stehen viele Integrale, es gibt auch Integraltafeln, die
-hunderte von Integralen fertig angeben. CAS-Programme können alle sehr gut
-integrieren.
-
-Aus der Formel~\eqref{eq:35} erkennt man, dass das Integral negativ wird, wenn
-im betrachteten Intervall $f(x)<0$ ist. Dann verläuft die Kurve unterhalb der
-x-Achse, und man muss als Fläche den Betrag nehmen. Integrale sind aber nicht
-nur Flächen, mit ihnen kann man Volumina, Energien, Ladungen und und und
-\ldots ausrechnen, und bei vielen dieser Größen sind negative Werte durchaus
-sinnvoll!
-
-\subsection{Produktintegration}
-Nach der Produktregel ist $(uv)'=u'v+uv'$. Integriert man nun beide Seiten,
-und beachtet, dass nach dem Hauptsatz $\int (uv)'\dD x=uv$ ist, dann bekommt
-man die Formel für die Produktintegration, die auch \emph{partielle
-  Integration} genannt wird.
-\begin{equation}
-  \label{eq:42}
-  \int u'v\dD x= uv - \int uv'\dD x
-\end{equation}
+Beweis:\\
+Nachweisen u, v diffbar und u', v' stetig (kommt noch in sauber)\\
+$
+(u(x)*v(x))' = u'(x)v(x)+u(x)v'(x)\\
+\Leftrightarrow \int (u(x)*v(x))' dx = \int u'(x)v(x)+\int u(x)v'(x)\\
+\Leftrightarrow u(x)*v(x) = \int u'(x)v(x)+\int u(x)v'(x)\\
+\Leftrightarrow \int u(x)v'(x) = u(x)*v(x)- \int u'(x)v(x)\\
+$
 
 Mit dieser Regel kann man \zB Integrale folgender Form lösen:
 \[
@@ -234,7 +109,7 @@ $v'=1/x$ und erhält:
 x\ln x-\int 1\dD x=x\ln x -x
 \]
 
-\subsection{Substitutionsmethode}
+\subsubsection{Substitutionsmethode}
 Es soll die Stammfunktion von $x(1-x^2)^9$ bestimmt werden. Hier wäre zum
 Ableiten die Kettenregel und die Produktregel nötig, beides gibt es aber in
 reiner Form beim Integrieren nicht. Man kann aber häufig durch geschickte
@@ -284,7 +159,7 @@ A=\frac{ab}{2}\left[u+\sin u\cos u\right]_{-\frac{\pi}{2}}^{+\frac{\pi}{2}}=
 \]
 Die gesamte Fläche der Ellipse ist doppelt so groß, also $\pi a b$.
 
-\subsection{Partialbruchzerlegung}
+\subsubsection{Partialbruchzerlegung}
 Die Partialbruchzerlegung ist ein allgemeines Verfahren zur Integration
 gebrochen rationaler Funktionen. Es sei gegeben:
 \begin{equation}
@@ -385,146 +260,65 @@ Insbesondere ist dann (rechne das nach!)
        \frac{5}{24}\cdot\frac{y}{(y^2+1)^2}+\frac{y}{6(y^2+1)^3}
 \end{align*}
 
-\section{Beispiele zur Integration}
-\NA Man bestimme die Fläche unter der Parabel $y=2x^2$ im Bereich $1\le x\le
-4$.
-\[
-\int_1^4 2x^2\dD x=\left[\frac{2}{3}x^3\right]_1^4=\frac{2}{3}(64-1)=42
-\]
+\subsection{Bemerkungen}
+Erweiterung der NEW-Regel
 
-\NA Bestimme die Formel für das Volumen einer Pyramide der Höhe $h$ und der
-Grundfläche $G$.
+\section{Flächenberechnung mittels Integralen}
+\begin{Definition}
+  Für die auf dem Intervall $[a;b]$ (also stückweise) stetige Funktion $f$ mit Nullstellen und $x_1,x_2,...,x_n$
+  mit $a \leq x_1 \leq x_2 \leq ... \leq x_n \leq b$ ist der Flächeninhalt $A$ zwischen dem Graphen von $f$ und
+  der $x_1$-Achse im Intervall $[a;b]$ gegeben durch:\\\\
+  $A= |{\int_a^{x_1} f(x)dx}|+|{\int_{x_1}^{x_2} f(x)dx}|...+|{\int_{x_{n-1}}^{x_n} f(x)dx}|+|{\int_{x_n}^b f(x)dx}|$
+\end{Definition}
 
-Man stellt sich die Pyramide aus dünnen Schichten der Dicke $\dD x$ parallel
-zur Grundfläche aufgebaut vor. Die x-Achse legt man durch die Spitze der
-Pyramide, so dass die Höhe auf die x-Achse zu liegen kommt. Da die Flächen der
-Schichten dann durch zentrische Streckung aus der Grundfläche entstehen, hat
-eine Schicht im Abstand $x$ von der Spitze die Fläche $A(x)$, für die nach dem
-Strahlensatz gilt:
-\[
-\frac{x^2}{h^2}=\frac{A(x)}{G}\quad\Rpf\quad A(x)=\frac{G}{h^2} x^2
-\]
-Das Volumen einer Schicht ist dann $\dD V=A(x)\dD x$. Das Volumen der Pyramide
-ist die Summe der Volumina aller Schichten, diese Summe bekommt man durch
-Integration:
-\[
-V=\int_0^h \dD V=\int_0^h \frac{G}{h^2}x^2\dD x
-=\frac{G}{h^2}\cdot\frac{1}{3}\left[x^3\right]_0^h=
-\frac{G}{3h^2}(h^3-0)=\frac{1}{3}Gh
-\]
+\\Graph+Intergal
+\definecolor{xdxdff}{rgb}{0.49019607843137253,0.49019607843137253,1.}
+\definecolor{ffqqqq}{rgb}{1.,0.,0.}
+\definecolor{qqzzqq}{rgb}{0.,0.6,0.}
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=5.0cm,y=5.0cm]
+  \begin{axis}[
+  x=5.0cm,y=5.0cm,
+  axis lines=middle,
+  xmin=-1.0261085461981427,
+  xmax=0.8799969446433364,
+  ymin=-0.45014188815180656,
+  ymax=0.9656470777143747,
+  xtick={-1.0,-0.8,...,0.8},
+  ytick={-0.4,-0.2,...,0.8},]
+  \clip(-1.0261085461981427,-0.45014188815180656) rectangle (0.8799969446433364,0.9656470777143747);
+  \draw[line width=0.8pt,color=ffqqqq,fill=ffqqqq,fill opacity=0.10000000149011612] plot[raw gnuplot, id=func1] function{set samples 100; set xrange [-0.7:0.4]; plot 7.0*x**(3.0)+5.0*x**(2.0)-0.3} -- (0.4,0.) -- (-0.7,0.) -- cycle;
+  \draw[line width=2.4pt,color=qqzzqq] plot[raw gnuplot, id=func0] function{set samples 100; set xrange [-0.9261085461981428:0.7799969446433365]; plot 7.0*x**(3.0)+5.0*x**(2.0)-0.3};
+  \begin{scriptsize}
+  \draw[color=qqzzqq] (-0.836110892770214,-1.1411817405388711) node {$f$};
+  \draw[color=xdxdff] (-0.6828869787154327,0.05702926736952031) node {$A$};
+  \draw[color=xdxdff] (0.4203252024789926,0.05702926736952031) node {$B$};
+  \end{scriptsize}
+  \end{axis}
+\end{tikzpicture}
+\begin{Beispiel}
+  $f(x)=x^2-2x^3;x\in \R$\\
+  notwendige und hinreichende Bedingung für Nullstellen:$f(x)=0$\\
+  $\Leftrightarrow x^2(x-2)&=0\\
+  \stackrel{SdN}{\Leftrightarrow}
+  \left\{ \begin{array}{rcl}
+  x^2&=0\\
+  x-2&=0
+  \end{array}\right\\
+  \Leftrightarrow
+  \left\{ \begin{array}{rcl}
+  x_1&=0\\
+  x_2&=2
+  \end{array}\right\\
+  $\\
+  Also gilt:\\
+  $A_{-1}^{3} &= |\int_{-1}^0 x^3-2x^2 dx| + |\int_{0}^2 x^3-2x^2 dx| + |\int_{2}^3 x^3-2x^2 dx|\\
+  &= |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{-1}^0| + |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{0}^2| + |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{2}^3|\\
+  &= |0-(\dfrac{1}{4}-\dfrac{2}{3})| + |4-\dfrac{8}{3}-0| + |\dfrac{81}{4}-54 - (4-\dfrac{8}{3})|\\
+  &= \dfrac {35}{6}$FE\\
+  (Also hoffentlich)
 
-\NA Bestimme die Energie, die notwendig ist, um einen Körper der Masse $m$ im
-Schwerefeld der Masse $M$ vom Abstand $R$ ins Unendliche zu bringen.
-
-Um den Körper das Stückchen $\dD r$ vom Zentralkörper zu entfernen, braucht
-man die Arbeit $\dD W=F\dD r$, wobei $F$ die Gravitationskraft ist. Die gesamte
-notwendige Arbeit ist dann:
-\[
-W=\int_R^{\infty}\dD W=\int_R^{\infty}G\frac{Mm}{r^2}\dD r=
-GMm\left[-\frac{1}{r}\right]_R^{\infty}=GMm(0-(-\frac{1}{R}))=\frac{GMm}{R}
-\]
-
-Dies war ein Beispiel eines sogenannten \emph{uneigentlichen Integrals}, bei
-solchen liegen entweder die Grenzen im Unendlichen, oder die Funktion selbst
-wird an einer Stelle unendlich.
-
-\NA Bestimme $ \D\int_{-\infty}^{\infty}\E^{-x^2}\dD x$
-
-Diese Aufgabe habe ich eingefügt, weil das ein wichtiges Integral ist. Seine
-Berechnung ist aber nicht ganz einfach, man muss einen ">Umweg"< machen.
-Zuerst schreiben wir:
-\[
-\int_{-\infty}^{\infty}\E^{-x^2}\dD x=
-\sqrt{\left(\int_{-\infty}^{\infty}\E^{-x^2}\dD x\right)
-  \left(\int_{-\infty}^{\infty}\E^{-y^2}\dD y\right)}=
-\sqrt{\int_{-\infty}^{\infty}\int_{-\infty}^{\infty}
-    \E^{-(x^2+y^2)}\dD x\dD y}
-\]
-Führt man nun Polarkoordinaten ein, also $x=r\cos\phi; y=r\sin\phi$, dann ist
-das Flächenelement $r\dD\phi\dD r$ und $x^2+y^2=r^2$. Das letzte Integral wird
-dadurch
-\[
-\int_0^{2\pi}\dD\phi\int_0^{\infty}r\E^{-r^2}\dD r
-=2\pi\left[-\tfrac12\E^{-r^2}\right]_0^{\infty}=\pi \qRpf
-\int_{-\infty}^{\infty}\E^{-x^2}\dD x=\sqrt{\pi}
-\]
-
-Mit Substitution kann man nun noch beweisen:
-\[
-\int_{-\infty}^{\infty}\E^{-a x^2}\dD x=\sqrt{\frac{\pi}{a}}
-\]
-Dazu setzt man $u^2=ax^2\Rpf\dD u=\sqrt{a}\dD x$. Dies kann nur gehen, wenn
-$a>0$ ist. Man kann zeigen, dass die Formel sogar für komplexe $a$ stimmt,
-sofern $\Re a>0$ ist.
-
-\paragraph{Anmerkung:} $\E^{-x^2}$ hat keine elementare Stammfunktion, es gibt
-aber eine Reihe von höheren Funktionen, die mit diesem Integral verwandt sind.
-Zunächst ist dabei die aus der Wahrscheinlichkeitsrechnung bekannte
-Normalverteilung (\caps{Gau"s}-Verteilung) zu erwähnen, die durch
-\[
-\Phi(x)=\frac{1}{\sqrt{2\pi}}\int_{-\infty}^x\E^{-\frac{1}{2}t^2}\dD t
-\qqbox{mit}\Phi(\infty)=1
-\]
-definiert ist. Daneben gibt es die \caps{Gau"s}sche Fehlerfunktion
-\[
-\textrm{erf}\,(x)=\frac{2}{\sqrt{\pi}}\int_0^x\E^{-t^2}\dD t\qqbox{wobei}
-\Phi(x)=\frac{1}{2}\biggl(1+\textrm{erf}\,\Bigl(\frac{x}{\sqrt{2}}\Bigr)\biggr)
-\]
-
-\NA Bestimme das Integral durch Partialbruchzerlegung.
-Es sei gegeben:
-\[
-f(x)=\frac{x+2}{(x^2-1)(x^2+1)^2}=\frac{A}{x-1}+\frac{B}{x+1}+
-\frac{Cx+D}{(x^2+1)^2}+\frac{Ex+F}{x^2+1}
-\]
-Nun müssen die Koeffizienten $A,\dots,F$ bestimmt werden. Dazu multipliziert
-man zuerst mit dem Hauptnenner durch:
-\[
-x+2=A(x+1)(x^2+1)^2+B(x-1)(x^2+1)^2+(Cx+D)(x^2-1)+(Ex+F)(x^4-1)
-\]
-Zunächst kann man nun für $x$ spezielle Werte einsetzen, so dass möglichst
-viele Ausdrücke Null werden:
-\begin{align*}
-  x=1: &&& 3=8A \qRpf A=\tfrac{3}{8}\\
-  x=-1:&&& 1=-8B \qRpf B=-\tfrac{1}{8}\\
-  x=0: &&& 2=\tfrac38+\tfrac18-D-F
-\end{align*}
-Hätte man nur einfache Vielfachheiten, so könnte man auf diese Weise alle
-Koeffizienten bestimmen. Hier ist das leider nicht der Fall, so dass wir zur
-">Ochsentour"< greifen müssen. Dazu wird die rechte Seite ausmultipliziert und
-dann ein Koeffizientenvergleich gemacht:
-\begin{gather*}
-  x+2=(A-B-D-F)+(A+B-C-E)x+(2A-2B+D)x^2\\
-  \phantom{x}+(2A+2B+C)x^3+(A-B+F)x^4+(A+B+E)x^5
-\end{gather*}
-Der Koeffizientenvergleich liefert nun ein Gleichungssystem (wobei wir unsere
-schon bekannten Werte für $A$ und $B$ gleich einsetzen)
-\begin{align*}
-  2&=\tfrac{3}{8}+\tfrac{1}{8}-D-F\\
-  1&=\tfrac{3}{8}-\tfrac{1}{8}-C-E\\
-  0&=\tfrac{3}{4}+\tfrac{1}{4}+D\qRpf D=-1\\
-  0&=\tfrac{3}{4}-\tfrac{1}{4}+C\qRpf C=-\tfrac{1}{2}\\
-  0&=\tfrac{3}{8}+\tfrac{1}{8}+F\qRpf F=-\tfrac{1}{2}\\
-  0&=\tfrac{3}{8}-\tfrac{1}{8}+E\qRpf E=-\tfrac{1}{4}
-\end{align*}
-Setzt man die sich aus den letzten vier Gleichungen ergebenden Werte nun in die
-beiden ersten ein, so sind diese erfüllt. Wir sind fertig und haben das
-Ergebnis
-\[
-f(x)=\frac{\frac38}{(x-1)}-\frac{\frac18}{x+1}-\frac{\frac12x+1}{(x^2+1)^2}
--\frac{\frac14x+\frac12}{x^2+1}
-\]
-Nach den Gleichungen~\eqref{eq:70} und \eqref{eq:71} ergibt sich so:
-\begin{gather*}
-\int f(x)\dD x=\frac{3}{8}\ln|x-1|-\frac18\ln|x+1|+\frac14\cdot\frac{1}{x^2+1}\\
-\phantom{x}-\frac12\arctan x-\frac{x}{2(x^2+1)}-\frac{1}{8}\ln|x^2+1|
--\frac12\arctan x
-\end{gather*}
-
-Der Koeffizientenvergleich ist deshalb so leicht gegangen, weil wir schon
-einige Werte mit der Einsetze-Methode ermittelt hatten. Man hätte statt des
-Koeffizientenvergleichs auch weitere Gleichungen erzeugen können, indem man
-einfach weitere Zahlen einsetzt. Wenn irgend möglich, sollte man versuchen mit
-der Einsetze-Methode zum Ziel zu kommen. Am aller einfachsten ist es
-allerdings, Mathematica anzuwerfen, dann hat man das Integral in
-Sekundenbruchteilen.
+\end{Beispiel}
+\begin{GTR-Tipp}
+  Mit $Y_1 = f(x)$ und $Y_2 = abs(Y_1)$ bzw. $Y_2 = |Y_1|$ (zu finden in 'MATH'>'NUM' oder über Alpha-F2) lässt sich die Fläche berechnen über 2nd-CALC mit der Option Integral.\\
+  Hierzu wählt man $Y_2$ aus und gibt $a$ und $b$ an.
+\end{GTR-Tipp}
